@@ -3,6 +3,11 @@ Pkgcore Release Notes
 
 See ChangeLog for full commit logs; this is summarized/major changes.
 
+pkgcore 0.5.1: October 22, 2009
+
+* correct a python-2.6 incompatibility that rears it's head when doing
+  repository operations (installing, uninstalling, etc).
+
 
 pkgcore 0.5: October 22, 2009
 
